finishing layout a style

--- a/about-us.html
+++ b/about-us.html
@@ -40,6 +40,19 @@
 			</div>
 		</header>
 		<main id="about-us-main">
+			<aside>
+				<ul id="social">
+					<li>
+						<a href="" id="x"><img src="./assets/images/x.svg" /></a>
+					</li>
+					<li>
+						<a href="" id="f"><img src="./assets/images/facebook.svg" /></a>
+					</li>
+					<li>
+						<a href="" id="i"><img src="./assets/images/instagram.svg" /></a>
+					</li>
+				</ul>
+			</aside>
 			<div id="content--wrapper">
 				<article class="top">
 					<h2>About us</h2>
@@ -61,7 +74,10 @@
 					<h3>Our team</h3>
 					<div id="teams">
 						<article class="team">
-							<h3>Name</h3>
+							<div class="header--team">
+								<img src="./assets/images/user.svg" alt="" />
+								<h3>Name</h3>
+							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est ad
 								aperiam harum, fugit, quaerat id magni.
@@ -69,7 +85,10 @@
 							<span>CEO</span>
 						</article>
 						<article class="team">
-							<h3>Name</h3>
+							<div class="header--team">
+								<img src="./assets/images/user.svg" alt="" />
+								<h3>Name</h3>
+							</div>
 							<p>
 								laboriosam voluptas sint blanditiis labore tempore laudantium
 								doloremque corporis enim repellendus.
@@ -77,7 +96,10 @@
 							<span>Team Lead</span>
 						</article>
 						<article class="team">
-							<h3>Name</h3>
+							<div class="header--team">
+								<img src="./assets/images/user.svg" alt="" />
+								<h3>Name</h3>
+							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est ad
 								aperiam harum, fugit, quaerat id magni ut
