--- a/contact-us.html
+++ b/contact-us.html
@@ -40,6 +40,19 @@
 			</div>
 		</header>
 		<main id="contact-us-main">
+			<aside>
+				<ul id="social">
+					<li>
+						<a href="" id="x"><img src="./assets/images/x.svg" /></a>
+					</li>
+					<li>
+						<a href="" id="f"><img src="./assets/images/facebook.svg" /></a>
+					</li>
+					<li>
+						<a href="" id="i"><img src="./assets/images/instagram.svg" /></a>
+					</li>
+				</ul>
+			</aside>
 			<div id="content--wrapper">
 				<form action="#" id="contact-form">
 					<h2>Contact Us</h2>
