--- a/index.html
+++ b/index.html
@@ -33,13 +33,26 @@
 						id="search"
 						placeholder="Enter a destination or keyword"
 					/>
-					<button>
+					<button id="search-btn">
 						<img src="./assets/images/search.png" />
 					</button>
 				</div>
 			</div>
 		</header>
 		<main id="home-main">
+			<aside>
+				<ul id="social">
+					<li>
+						<a href="" id="x"><img src="./assets/images/x.svg" /></a>
+					</li>
+					<li>
+						<a href="" id="f"><img src="./assets/images/facebook.svg" /></a>
+					</li>
+					<li>
+						<a href="" id="i"><img src="./assets/images/instagram.svg" /></a>
+					</li>
+				</ul>
+			</aside>
 			<div id="content--wrapper">
 				<article>
 					<h2>Explore dream destination</h2>
@@ -53,5 +66,6 @@
 				</article>
 			</div>
 		</main>
+		<script src="./js/index.js"></script>
 	</body>
 </html>
