--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<button id="search-btn">
 						<img src="./assets/images/search.png" />
 					</button>
+					<div id="search-result"></div>
 				</div>
 			</div>
 		</header>
