--- a/about-us.html
+++ b/about-us.html
@@ -33,9 +33,10 @@
 						id="search"
 						placeholder="Enter a destination or keyword"
 					/>
-					<button>
+					<button id="search-btn">
 						<img src="./assets/images/search.png" />
 					</button>
+					<div id="search-result" class="hidden"></div>
 				</div>
 			</div>
 		</header>
@@ -110,5 +111,6 @@
 				</div>
 			</div>
 		</main>
+		<script src="./js/search.js"></script>
 	</body>
 </html>
