--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<button id="search-btn">
 						<img src="./assets/images/search.png" />
 					</button>
-					<div id="search-result"></div>
+					<div id="search-result" class="hidden"></div>
 				</div>
 			</div>
 		</header>
@@ -67,6 +67,6 @@
 				</article>
 			</div>
 		</main>
-		<script src="./js/index.js"></script>
+		<script src="./js/search.js"></script>
 	</body>
 </html>
